--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="CSS/normalize.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="CSS/styles.css">
 	<link rel="stylesheet" href="CSS/fonts.css">
 	<link rel="icon" type="image/x-icon" href="IMG/icon.png">
@@ -52,6 +52,9 @@
 			</div>
 			<div>
 				<a href="PAGINAS/PAGINA6/index.html" class="active3">Restaurante</a>
+			</div>
+			<div>
+				<a href="PAGINAS/PAGINA7/index.html" class="active3">Blog</a>
 			</div>
 		</div>
 		<div>
